# linode-backup-lab

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: check.yml
docs/: governance-ci.md  manifest-cli-contract.md  provider-assumptions.md  releasing.md  restore-drill-design.md  schema-artifact-groundwork.md  snapshot-execution-boundary.md
examples/: backup-lab.example.toml
src/linode_backup_lab/: __init__.py  __main__.py  cli.py  config.py  inspect.py  linode_api.py  manifest.py  plan.py  replay.py  review.py  snapshot.py
tests/fixtures/sanitized/: inspect-provider-backups.missing-optional-fields.normalized.json  inspect-provider-backups.normalized.json  inspect-provider-backups.status-transitions.normalized.json  inspect-report.match.json
tests/unit/: test_architecture_boundaries.py  test_cli.py  test_config.py  test_inspect.py  test_linode_api.py  test_manifest.py  test_manifest_contracts.py  test_packaging.py  test_plan.py  test_sanitized_fixtures.py  test_snapshot.py
