[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linode-backup-lab"
version = "0.1.0"
description = "Lightweight Linode backup and snapshot validation lab"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "tomli>=2.0; python_version<'3.11'",
]

[tool.setuptools.packages.find]
where = ["src"]
