[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "linode-backup-lab"
version = "0.1.0"
description = "Lightweight Linode backup and snapshot validation lab"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = []

[project.scripts]
linode-backup-lab = "linode_backup_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
